--- a/users/user.css
+++ b/users/user.css
@@ -101,7 +101,7 @@ main {
         width: 250px;
         border-radius: 100%;
         transition: transform 300ms, box-shadow ease-in-out 300ms;
-        animation: zoomOut 2s ease-in-out 0s 1 reverse forwards;
+        animation: zoomOut 3s ease-in-out 0s 1 reverse forwards;
 
         &#tr:hover {
             box-shadow: 0px 0px 0 10px rgba(227, 10, 23, 0.9),
@@ -139,14 +139,14 @@ main {
     animation: ScaleVertical 2s ease-in-out 0s 1 reverse forwards;
 
     & > h1 {
-        animation: FadeOutLeft 3s ease-in-out 2s 1 reverse forwards;
+        animation: FadeOutLeft 2s ease-in-out 2s 1 reverse forwards;
         opacity: 0;
     }
 
     & > h4 {
         font-weight: 400;
         color: var(--clr-neutral-300);
-        animation: FadeOutLeft 3s ease-in-out 2s 1 reverse forwards;
+        animation: FadeOutLeft 2s ease-in-out 2s 1 reverse forwards;
         opacity: 0;
     }
 }
@@ -362,10 +362,12 @@ footer {
 @keyframes zoomOut {
     0% {
         transform: scale(1);
+        opacity: 1;
     }
 
     100% {
         transform: scale(1.2);
+        opacity: 0;
     }
 }
 
